fix(features/home): network action default value
Fix the default value for network action by removing the extra space,
and ensure the default_values_list_text field is handled if it's
missing in the response.
Fix the issue where the button color doesn't change on the network
action detail page when it is disabled.
Remove the unused ActionsDialogComponent.

--- a/src/app/features/home/details/actions/action-details/action-details.page.scss
+++ b/src/app/features/home/details/actions/action-details/action-details.page.scss
@@ -72,28 +72,6 @@ ion-footer {
       font-weight: 700;
     }
   }
-
-  .custom-button {
-    padding: 16px 20px;
-    background-color: #3880ff;
-    color: white;
-    border: none;
-    border-radius: 37px;
-    cursor: pointer;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    letter-spacing: 0.26px;
-    text-transform: uppercase;
-
-    &:hover {
-      background-color: #0056b3;
-    }
-  }
 }
 
 ion-spinner {
